# fastapi-celery

./: .gitignore  ReadMe.md  docker-compose.yaml
src/api/: Dockerfile  pyproject.toml
src/api/src/api/: main.py
src/api/tests/: test_main.py
src/celeryworker/: .gitignore  Dockerfile  pyproject.toml
src/celeryworker/src/celeryworker/: worker.py
