[tool.poetry]
name = "celeryworker"
version = "0.1.3"
description = "A celery worker"
authors = ["Newmi <newmi1988@gmail.com>"]
license = "MIT"

[tool.poetry.dependencies]
python = "^3.8"
redis = "^3.5.3"
celery = "^5.0.2"

[tool.poetry.dev-dependencies]
newmi1988_dev_deps = {git = "https://github.com/Newmi1988/poetry-dev-packges.git", branch="main"}

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
